--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lexical": "^0.16.1",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
+    "nextjs-toploader": "^1.6.12",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
